--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -203,7 +203,7 @@
 
     // Fetch attributes from main.js
     let attributes = {};
-    // attributes = get_attributes();
+    attributes = get_attributes();
 
     // extrach accelerometer data
     let data_point = [];
@@ -228,12 +228,12 @@
       ]);
     }
 
-    // if (
-    //   DeviceMotionEvent &&
-    //   typeof DeviceMotionEvent.requestPermission === "function"
-    // ) {
-    //   DeviceMotionEvent.requestPermission();
-    // }
+    if (
+      DeviceMotionEvent &&
+      typeof DeviceMotionEvent.requestPermission === "function"
+    ) {
+      DeviceMotionEvent.requestPermission();
+    }
 
     if (window.DeviceMotionEvent) {
       console.log('Device has an accelerometer.');
@@ -251,7 +251,7 @@
     let chart_container = document.getElementById("chart_container");
 
 
-    
+
     window.addEventListener("devicemotion", handleMotion);
     window.addEventListener("deviceorientation", handleOrientation);
 
@@ -285,7 +285,7 @@
             console.error("Error:", error);
           });
       }
-        , 2000);
+        , 5000);
 
     });
 
