--- a/templates/index.html
+++ b/templates/index.html
@@ -231,7 +231,7 @@
           .then((data) => {
             let dat = [];
             let cat = [];
-            console.log(data['data']);
+            console.log(data);
             let res = data['data']['attributes'];
             let d_boi = data['data']['desktop']['bits_of_info'];
             let m_boi = data['data']['mobile']['bits_of_info'];
