--- a/templates/index.html
+++ b/templates/index.html
@@ -294,7 +294,9 @@
             let ctx = document.getElementById("chart");
             var options = {
               series: [{
-                data: [400, 430, 448, 470, 540, 580, 690, 1100, 1200, 1380]
+                // data: [400, 430, 448, 470, 540, 580, 690, 1100, 1200, 1380],
+                data: dat
+
               }],
               chart: {
                 type: 'bar',
@@ -310,9 +312,6 @@
                   },
                 }
               },
-              colors: ['#33b2df', '#546E7A', '#d4526e', '#13d8aa', '#A5978B', '#2b908f', '#f9a3a4', '#90ee7e',
-                '#f48024', '#69d2e7'
-              ],
               dataLabels: {
                 enabled: true,
                 textAnchor: 'start',
@@ -332,9 +331,10 @@
                 colors: ['#fff']
               },
               xaxis: {
-                categories: ['South Korea', 'Canada', 'United Kingdom', 'Netherlands', 'Italy', 'France', 'Japan',
-                  'United States', 'China', 'India'
-                ],
+                // categories: ['South Korea', 'Canada', 'United Kingdom', 'Netherlands', 'Italy', 'France', 'Japan',
+                //   'United States', 'China', 'India'
+                // ],
+                categories: cat,
               },
               yaxis: {
                 labels: {
