--- a/templates/index.html
+++ b/templates/index.html
@@ -198,9 +198,9 @@
 
     function handleMotion(event) {
         data_point.push([
-        event.accelerationIncludingGravity.x,
-        event.accelerationIncludingGravity.y,
-        event.accelerationIncludingGravity.z,
+        event.acceleration.x,
+        event.acceleration.y,
+        event.acceleration.z,
         ]);
     }
 
